argocd/manifests/gamble-king-v2/base/middleware-gk-strip-auth-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    environment: staging
  name: gk-strip-auth-prefix
spec:
  stripPrefix:
    prefixes:
    - /auth/v1
