argocd/manifests/gamble-king-v2/base/middleware-gk-strip-functions-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    environment: dev
  name: gk-strip-functions-prefix
spec:
  stripPrefix:
    prefixes:
    - /functions/v1
