argocd/manifests/gamble-king-v2/base/middleware-gk-studio-forwardauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    environment: dev
  name: gk-studio-forwardauth
spec:
  forwardAuth:
    address: http://10.43.182.249:4180/oauth2/auth
    authResponseHeaders:
    - X-Auth-Request-User
    - X-Auth-Request-Email
    trustForwardHeader: true
