argocd/manifests/gamble-king-v2/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamble-king-v2-dev
  labels:
    app.kubernetes.io/name: gamble-king-v2
    app.kubernetes.io/managed-by: argocd
