argocd/manifests/gamble-king-v2/base/deployment-gamble-king-v2-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    environment: staging
  name: gamble-king-v2-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamble-king-v2-web
      environment: staging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gamble-king-v2-web
        environment: staging
    spec:
      containers:
      - env:
        - name: PUBLIC_SUPABASE_URL
          value: https://staging.gambleking.app
        - name: PUBLIC_SUPABASE_ANON_KEY
          valueFrom:
            secretKeyRef:
              key: ANON_KEY
              name: gamble-king-v2-secrets
        image: ghcr.io/jlevangi/gamble-king:app-ee9fa3751b1c02806823528edaf88458e4f6657c
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          timeoutSeconds: 5
        name: web
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
      imagePullSecrets:
      - name: gamble-king-v2-ghcr
