argocd/manifests/gamble-king-v2/base/deployment-gk-gotrue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    environment: dev
  name: gk-gotrue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gk-gotrue
      environment: dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        gambleking.app/config-revision: dev-domain-2026-08-30
        kubectl.kubernetes.io/restartedAt: '2026-08-28T13:31:05-04:00'
      labels:
        app: gk-gotrue
        environment: dev
    spec:
      containers:
      - env:
        - name: GOTRUE_DB_DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: GOTRUE_DB_DATABASE_URL
              name: gamble-king-v2-secrets
        - name: GOTRUE_JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: gamble-king-v2-secrets
        image: supabase/gotrue:v2.158.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 3
        name: gotrue
        ports:
        - containerPort: 9999
          name: http
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 25m
            memory: 64Mi
