argocd/manifests/gamble-king-v2/base/deployment-gk-postgres-meta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    environment: staging
  name: gk-postgres-meta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gk-postgres-meta
      environment: staging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gk-postgres-meta
        environment: staging
    spec:
      containers:
      - env:
        - name: PG_META_PORT
          value: '8080'
        - name: PG_META_DB_HOST
          value: gk-postgres
        - name: PG_META_DB_PORT
          value: '5432'
        - name: PG_META_DB_NAME
          value: postgres
        - name: PG_META_DB_USER
          value: supabase_admin
        - name: PG_META_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: gamble-king-v2-secrets
        - name: CRYPTO_KEY
          valueFrom:
            secretKeyRef:
              key: PG_META_CRYPTO_KEY
              name: gamble-king-v2-secrets
        image: supabase/postgres-meta:v0.96.6
        imagePullPolicy: IfNotPresent
        name: meta
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 25m
            memory: 64Mi
