argocd/manifests/gamble-king-v2/base/deployment-gk-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    backup.levangie.dev/engine: postgres
    environment: staging
  name: gk-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gk-postgres
      environment: staging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gk-postgres
        environment: staging
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: postgres
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: gamble-king-v2-secrets
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: gamble-king-v2-secrets
        - name: PGDATA
          value: /var/lib/postgresql/data
        image: supabase/postgres:15.6.1.146
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 20
          periodSeconds: 20
          tcpSocket:
            port: postgres
          timeoutSeconds: 3
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 10
          tcpSocket:
            port: postgres
          timeoutSeconds: 3
        resources:
          limits:
            cpu: '1'
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          runAsGroup: 106
          runAsUser: 105
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
        - mountPath: /dev/shm
          name: dshm
      securityContext:
        fsGroup: 106
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: gk-postgres-pvc
      - emptyDir:
          medium: Memory
          sizeLimit: 64Mi
        name: dshm
