argocd/manifests/gamble-king-v2/base/deployment-gk-postgrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    environment: staging
  name: gk-postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gk-postgrest
      environment: staging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-08-28T13:30:11-04:00'
      labels:
        app: gk-postgrest
        environment: staging
    spec:
      containers:
      - env:
        - name: PGRST_DB_URI
          valueFrom:
            secretKeyRef:
              key: PGRST_DB_URI
              name: gamble-king-v2-secrets
        - name: PGRST_JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: gamble-king-v2-secrets
        image: postgrest/postgrest:v12.2.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 3
        name: postgrest
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 25m
            memory: 64Mi
