argocd/manifests/gamble-king-v2/base/deployment-gk-studio-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    environment: staging
  name: gk-studio-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gk-studio-oauth2-proxy
      environment: staging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gk-studio-oauth2-proxy
        environment: staging
    spec:
      containers:
      - args:
        - --provider=keycloak-oidc
        - --oidc-issuer-url=https://auth.levangie.org/realms/master
        - --redirect-url=https://supabase-gambleking-staging.levangie.dev/oauth2/callback
        - --http-address=0.0.0.0:4180
        - --upstream=static://202
        - --email-domain=*
        - --cookie-secure=true
        - --cookie-samesite=lax
        - --cookie-domain=supabase-gambleking-staging.levangie.dev
        - --whitelist-domain=supabase-gambleking-staging.levangie.dev
        - --reverse-proxy=true
        - --set-xauthrequest=true
        - --skip-provider-button=true
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.8.2
        imagePullPolicy: IfNotPresent
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: http
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
