argocd/manifests/gamble-king-v2/base/gotrue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gk-gotrue
  namespace: gamble-king-v2-dev
spec:
  selector:
    app: gk-gotrue
  ports:
    - name: http
      port: 9999
      targetPort: http
