argocd/manifests/gamble-king-v2/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gk-postgres
  namespace: gamble-king-v2-dev
spec:
  selector:
    app: gk-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
