argocd/manifests/gamble-king-v2/base/postgrest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gk-postgrest
  namespace: gamble-king-v2-dev
spec:
  selector:
    app: gk-postgrest
  ports:
    - name: http
      port: 3000
      targetPort: http
