argocd/manifests/gamble-king-v2/base/service-gamble-king-v2-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: staging
  name: gamble-king-v2-web
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: gamble-king-v2-web
    environment: staging
