argocd/manifests/gamble-king-v2/base/service-gk-functions.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: dev
  name: gk-functions
spec:
  ports:
  - name: http
    port: 9000
    targetPort: http
  selector:
    app: gk-functions
    environment: dev
