argocd/manifests/gamble-king-v2/base/service-gk-gotrue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: dev
  name: gk-gotrue
spec:
  ports:
  - name: http
    port: 9999
    targetPort: http
  selector:
    app: gk-gotrue
    environment: dev
