argocd/manifests/gamble-king-v2/base/service-gk-postgres-meta.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: staging
  name: gk-postgres-meta
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: gk-postgres-meta
    environment: staging
