argocd/manifests/gamble-king-v2/base/service-gk-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: dev
  name: gk-postgres
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres
  selector:
    app: gk-postgres
    environment: dev
