argocd/manifests/gamble-king-v2/base/service-gk-postgrest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: dev
  name: gk-postgrest
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: gk-postgrest
    environment: dev
