argocd/manifests/gamble-king-v2/base/service-gk-studio-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: dev
  name: gk-studio-oauth2-proxy
spec:
  clusterIP: 10.43.182.249
  ports:
  - name: http
    port: 4180
    targetPort: http
  selector:
    app: gk-studio-oauth2-proxy
    environment: dev
