argocd/manifests/gamble-king-v2/base/service-gk-studio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    environment: dev
  name: gk-studio
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: gk-studio
    environment: dev
